# auratrip

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  prompt.md  video_processor.py
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/src/agents/: planner_agent.py  scout_agent.py  visual_agent.py  weather_agent.py
backend/src/api/: main.py  videodb_mock.py
backend/src/client/: brightdata_client.py  daytona_client.py  nosana_client.py  sensenova_client.py  terminal3_client.py  tokenrouter_client.py  videodb_client.py
backend/src/models/: itinerary.py  scraped_post.py  trip.py  user.py  videodb.py
backend/src/services/: generation_service.py  planning_service.py  scraping_service.py  weather_service.py
backend/src/utils/: helpers.py
backend/tests/: test_main.py  test_placeholder.py  test_videodb_endpoints.py
common/types/: agent.ts  itinerary.ts  trip.ts
data/: Instagram.html  bright_data.py  instagram_bright_data.py
data/Instagram_files/: -j3Q-TuJ9Cy.js  0O3iUlxVgPl.js  CKKoD8n6EQBT4a1kmeMu6mnNcEu0993FKUSvzbPBcSspI9k8nXq089dpaT6hsSlpddpnMMLVJszTDpoebZIPLmSM0FbROOjSCWMTGHskmxiWfmyHfmvHo1bkU.js  CTRVFVSyyIR.js  HlD4tDoBGY6.js  JCsV1ANRDM9.js  OQbT7R45yRK.js  ORjE0ZgUHL1.js  OvQcCbctuRn.js  RgysReyIWmV.js  SPrL1sKXzQD.js  Uo8CpqL_69v.js  (+19 more)
docs/: API.md  HACKATHON.md  SETUP.md
frontend/: README.md  angular.json
scripts/: deploy.sh  deploy_daytona.py  deploy_service.py  scrape_bootstrap.py  seed_data.py
(+29 files in other folders)
