[tool.poetry]
name = "auratrip-backend"
version = "0.1.0"
description = "Auratrip backend services"
authors = ["Auratrip Team <noreply@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
